# honeylist

./: .gitignore  README.md  cowrie.json  pyproject.toml
honeylist/: .honeylist.py.swp  honeylist.py
honeylist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_honeylist.py
