[tool.poetry]
name = "honeylist"
version = "0.1.0"
description = "Generate password wordlists from honeypot logs"
authors = ["Joshua Murphy <hello@joshmurphy.ca>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
